feat: all category endpoint
